🌻[Assignment] Week_3_GET post 기능 구현